--- a/capstone-web/package.json
+++ b/capstone-web/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mohful.github.io/CapstoneWebsite",
+  "homepage": "http://mohful.github.io/capstone-website",
   "name": "capstone-website",
   "version": "0.1.0",
   "private": true,
